@@ -4,6 +4,11 @@
 
 - v1.0.1040                                 -
 ---------------------------------------------
+- 2020-11-01                                -
+---------------------------------------------
+.: WSM: Task: Prevent caching issue (WSM-221)
+
+---------------------------------------------
 - 2020-10-31                                -
 ---------------------------------------------
 .: WSM: BugFix: Reading url from backend issue (WSM-218)
